--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Database access has already been done on April 1, 2025 by **** Naheed</p>
+    <p>Database access has already been done on April 1, 2025 by Naheed</p>
 </div>
